--- a/pathtocoexistence.html
+++ b/pathtocoexistence.html
@@ -714,7 +714,7 @@ As you prepare for another emergency briefing, you reflect on the philosophy tha
 &lt;!--Credits--&gt;
 Thanks for playing, this was created for the &lt;a href=&quot;https://aisafetyfundamentals.com/governance/&quot;&gt;BlueDot AI Governance&lt;/a&gt; course by &lt;a href=&quot;https://www.linkedin.com/in/julian-grassi/&quot;&gt;Julian&lt;/a&gt; using &lt;a href=&quot;https://twinery.org/&quot;&gt;Twine&lt;/a&gt;. 
 
-This was intended to provide a fun and interactive platform for learning about AI Governance and the decisions that impact it. I&#39;m sure it could be greatly improved and I welcome any changes to it. The full source code can be found on my &lt;a href=&quot;&quot;&gt;Github&lt;/a&gt;. 
+This was intended to provide a fun and interactive platform for learning about AI Governance and the decisions that impact it. I&#39;m sure it could be greatly improved and I welcome any changes to it. The full source code can be found on my &lt;a href=&quot;https://github.com/juujii/pathtocoexistence/tree/main&quot;&gt;Github&lt;/a&gt;. 
 
 
 &lt;!--Choices--&gt;
