--- a/pathtocoexistence.html
+++ b/pathtocoexistence.html
@@ -152,7 +152,7 @@ tw-link:hover, .link:hover {
 
 .passage-title {
   display: none;
-}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Introduction" tags="" position="1650,725" size="100,100">&lt;!--Title--&gt;
+}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Introduction" tags="" position="1650,650" size="100,100">&lt;!--Title--&gt;
 &lt;div class=&quot;title&quot;&gt;THE PATH TO COEXISTENCE&lt;/div&gt;
 
 &lt;!--Scene--&gt;
@@ -245,7 +245,7 @@ The line cuts out...
 &lt;div class=&quot;title&quot;&gt;OVERSIGHT&lt;/div&gt;
 
 &lt;!--Scene--&gt;
-&lt;div class=&quot;location&quot;&gt;[DIRECTOR CHEN&#39;S OFFICE, WASHINGTON DC - FEBRUARY 2027]&lt;/div&gt;
+&lt;div class=&quot;location&quot;&gt;DIRECTOR CHEN&#39;S OFFICE, WASHINGTON DC - FEBRUARY 2027&lt;/div&gt;
 
 &lt;!--Narrative--&gt;
 &lt;img src=&quot;images/3_oversight.png&quot; alt=&quot;Meeting in Wei Chen&#39;s office&quot;&gt;
@@ -295,7 +295,7 @@ You pause. This decision will lay the foundation for the future of AI governance
 &lt;div class=&quot;title&quot;&gt;VISIBILITY&lt;/div&gt;
 
 &lt;!--Scene--&gt; 
-&lt;div class=&quot;location&quot;&gt;[GAGO SECURE OPERATIONS CENTER, LOCATION CLASSIFIED - MAY 2027]&lt;/div&gt;
+&lt;div class=&quot;location&quot;&gt;GAGO SECURE OPERATIONS CENTER, LOCATION CLASSIFIED - MAY 2027&lt;/div&gt;
 
 &lt;!--Narrative--&gt;
 The GAGO Secure Operations Center buzzes with activity as analysts monitor global AI deployments on wall-to-wall screens. This underground facility, its location classified even to most government officials, serves as the nerve center for tracking AI capabilities and potential misuse.
@@ -433,7 +433,7 @@ Says Dr. Chen quietly.
 &lt;div class=&quot;title&quot;&gt;CONTROLS&lt;/div&gt;
 
 &lt;!--Scene--&gt; 
-&lt;div class=&quot;scene-header&quot;&gt;[FORUM ON AI GOVERNANCE – WASHINGTON DC, FEBRUARY 2027]&lt;/div&gt;
+&lt;div class=&quot;location&quot;&gt;FORUM ON AI GOVERNANCE – WASHINGTON DC, FEBRUARY 2027&lt;/div&gt;
 
 &lt;!--Narrative--&gt;
 The imposing architecture of the National Academy of Sciences building seems fitting for today&#39;s discussions. The marble columns and stately halls now host representatives from government agencies, leading AI labs, and civil society organizations, all gathered to address the most critical question in AI governance: what controls should be required before deployment?
@@ -515,7 +515,7 @@ All eyes turn to you. This decision will establish how AI systems are evaluated 
 &lt;div class=&quot;title&quot;&gt;INCIDENT&lt;/div&gt;
 
 &lt;!--Scene--&gt; 
-&lt;div class=&quot;scene-header&quot;&gt;[GAGO SECURE OPERATIONS CENTER, LOCATION CLASSIFIED, APRIL 2027]&lt;/div&gt;
+&lt;div class=&quot;location&quot;&gt;GAGO SECURE OPERATIONS CENTER, LOCATION CLASSIFIED, APRIL 2027&lt;/div&gt;
 
 &lt;!--Narrative--&gt;
 
@@ -585,11 +585,11 @@ The weight of your previous decisions presses down on you. The governance struct
       &lt;/ul&gt;
     &lt;/div&gt;
   &lt;/details&gt;
-&lt;/div&gt;</tw-passagedata><tw-passagedata pid="8" name="Trust" tags="" position="1650,1750" size="100,100">&lt;!--Title--&gt;
+&lt;/div&gt;</tw-passagedata><tw-passagedata pid="8" name="Trust" tags="" position="1675,1775" size="100,100">&lt;!--Title--&gt;
 &lt;div class=&quot;title&quot;&gt;TRUST&lt;/div&gt;
 
 &lt;!--Scene--&gt; 
-&lt;div class=&quot;scene-header&quot;&gt;[GLOBAL AI GOVERNANCE OFFICE, WASHINGTON DC, JANUARY 2028]&lt;/div&gt;
+&lt;div class=&quot;location&quot;&gt;UNITED NATIONS ASSEMBLY HALL, NEW YORK CITY, JANUARY 2028&lt;/div&gt;
 
 &lt;!--Narrative--&gt;
 Six months after the ANDERSON crisis, the mood in the United Nations Assembly Hall is somber. Representatives from governments worldwide, tech industry leaders, and civil society organizations have gathered to determine the future of AI governance in a post-crisis world.
@@ -656,7 +656,7 @@ Wei adds.
 Your final governance score: (print: $governanceScore)
 
 (if: $governanceScore &gt;= 8)[
-&lt;div class=&quot;scene-header&quot;&gt;[FIVE YEARS LATER - WASHINGTON DC, 2033]&lt;/div&gt;
+&lt;div class=&quot;location&quot;&gt;FIVE YEARS LATER - WASHINGTON DC, 2033&lt;/div&gt;
 
 &lt;img src=&quot;images/9_restrictive.png&quot; alt=&quot;Restrictive&quot;&gt;
 
@@ -674,7 +674,7 @@ As you address the National Academy of Sciences on the fifth anniversary of the 
 ]
 
 (else-if: $governanceScore &gt;= 4)[
-&lt;div class=&quot;scene-header&quot;&gt;[FIVE YEARS LATER - GLOBAL AI PARTNERSHIP HEADQUARTERS, GENEVA, 2033]&lt;/div&gt;
+&lt;div class=&quot;location&quot;&gt;FIVE YEARS LATER - GLOBAL AI PARTNERSHIP HEADQUARTERS, GENEVA, 2033&lt;/div&gt;
 
 &lt;img src=&quot;images/9_balanced.png&quot; alt=&quot;Balanced&quot;&gt;
 
@@ -692,7 +692,7 @@ The world you helped create isn&#39;t perfect. Occasional AI incidents still occ
 ]
 
 (else:)[
-&lt;div class=&quot;scene-header&quot;&gt;[FIVE YEARS LATER - EMERGENCY BUNKER, LOCATION CLASSIFIED, 2033]&lt;/div&gt;
+&lt;div class=&quot;location&quot;&gt;FIVE YEARS LATER - EMERGENCY BUNKER, LOCATION CLASSIFIED, 2033&lt;/div&gt;
 
 &lt;img src=&quot;images/9_lax.png&quot; alt=&quot;Lax&quot;&gt;
 
